--- a/agriculture/index.html
+++ b/agriculture/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+  <script src="https://unpkg.com/helia/dist/index.min.js"></script>
 </head>
 
 <body>
